--- a/LensSimulator.html
+++ b/LensSimulator.html
@@ -9,19 +9,19 @@
     <meta name="author" content="Vincent Escueta">
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="main.css">
 
     <!-- Plugin CSS -->
-    <link rel="stylesheet" href="../css/animate.min.css" type="text/css">
+    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
 </head>
-<body>
+<body id="page-top" class="fade-out">
  <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -32,20 +32,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="../index.html">Vincent Escueta</a>
+                <a class="navbar-brand page-scroll" href="index.html">Vincent Escueta</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="../index.html">Portfolio</a>
+                        <a class="page-scroll" href="index.html">Portfolio</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="../about.html">About</a>
+                        <a class="page-scroll" href="about.html">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="../index.html#resume">Resume</a>
+                        <a class="page-scroll" href="index.html#resume">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -65,19 +65,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="images/part1_spheres_nolens.png" >
+                    <img src="LensSimulator/images/part1_spheres_nolens.png" >
                     <p align="middle">Figure 1: A rendering of spheres using a pinhole camera.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="images/part1_spheres_lens.png" >
+                    <img src="LensSimulator/images/part1_spheres_lens.png" >
                     <p align="middle">Figure 2: A blurred rendering of spheres with a lens.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="images/part1_spheres_len4.png" >
+                    <img src="LensSimulator/images/part1_spheres_len4.png" >
                     <p align="middle">Figure 3: An image with using a fisheye lens.</p>
                 </div>
             </div>
@@ -86,61 +86,61 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part1_lens1_ray1.png"/>
+                    <img src="LensSimulator/images/part1_lens1_ray1.png"/>
                     <p align="middle">Figure 4: D-GAUSS F/2 22deg HFOV rays traced forward.</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part1_lens1_ray2.png"/>
+                    <img src="LensSimulator/images/part1_lens1_ray2.png"/>
                     <p align="middle">Figure 5: D-GAUSS F/2 22deg HFOV rays traced backwords, infinite focus.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part1_lens1_ray3.png"/>
+                    <img src="LensSimulator/images/part1_lens1_ray3.png"/>
                     <p align="middle">Figure 6: D-GAUSS F/2 22deg HFOV rays traced forward with rays intersecting.</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part1_lens2_ray1.png"/>
+                    <img src="LensSimulator/images/part1_lens2_ray1.png"/>
                     <p align="middle">Figure 7: Wide-angle (38-degree) lens. Nakamura. rays traced forward.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part1_lens2_ray2.png"/>
+                    <img src="LensSimulator/images/part1_lens2_ray2.png"/>
                     <p align="middle">Figure 8: Wide-angle (38-degree) lens. Nakamura. rays traced backwards.</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part1_lens2_ray3.png"/>
+                    <img src="LensSimulator/images/part1_lens2_ray3.png"/>
                     <p align="middle">Figure 9: Wide-angle (38-degree) lens. Nakamura. rays traced forward below z axis.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part1_lens3_ray1.png"/>
+                    <img src="LensSimulator/images/part1_lens3_ray1.png"/>
                     <p align="middle">Figure 10: SIGLER Super achromate telephoto, EFL=254mm, F/5.6" rays traced backwards.</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part1_lens3_ray2.png"/>
+                    <img src="LensSimulator/images/part1_lens3_ray2.png"/>
                     <p align="middle">Figure 11: SIGLER Super achromate telephoto, EFL=254mm, F/5.6" forward rays.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part1_lens3_ray3.png"/>
+                    <img src="LensSimulator/images/part1_lens3_ray3.png"/>
                     <p align="middle">Figure 12: SIGLER Super achromate telephoto, EFL=254mm, F/5.6" forward rays.</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part1_lens4_ray1.png"/>
+                    <img src="LensSimulator/images/part1_lens4_ray1.png"/>
                     <p align="middle">Figure 13: Muller 16mm/f4 155.9FOV fisheye lens forward rays intersecting.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part1_lens4_ray2.png"/>
+                    <img src="LensSimulator/images/part1_lens4_ray2.png"/>
                     <p align="middle">Figure 14: Muller 16mm/f4 155.9FOV fisheye lens backwards rays intersecting.</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part1_lens4_ray3.png"/>
+                    <img src="LensSimulator/images/part1_lens4_ray3.png"/>
                     <p align="middle">Figure 15: Muller 16mm/f4 155.9FOV fisheye lens demonstrating refraction.</p>
                 </div>
             </div>
@@ -154,7 +154,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="images/part1_table.png" />
+                    <img src="LensSimulator/images/part1_table.png" />
                     <p align="middle">Figure 16: Calculations of some camera lenses.</p>
                 </div>
             </div>
@@ -163,25 +163,25 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="images/part1_Gauss.png" >
+                    <img src="LensSimulator/images/part1_Gauss.png" >
                     <p align="middle">Figure 17: D-GAUSS F/2 22deg HFOV /  Some points are (51.2587, -1223480), (52.6039, -1925.48), (53.142, -1388.52), (56.7741, -503.47) (60.5407, -317.08), (64.5763, -234.35)</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="images/part1_Wide-Angle.png" >
+                    <img src="LensSimulator/images/part1_Wide-Angle.png" >
                     <p align="middle">Figure 18: Wide-angle (38-degree) lens. Nakamura. / Some points are (28.7361, -13947.9), (31.0729, -229.471), (33.5072, -126.268), (35.3572, -98.3175) (37.4994, -80.6369), (38.4731, -751624)</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="images/part1_SIGLER.png" >
+                    <img src="LensSimulator/images/part1_SIGLER.png" >
                     <p align="middle">Figure 19: SIGLER Super achromate telephoto, EFL=254mm, F/5.6" / Some points are (188.754, -3.31E+06), (194.503, -11148), (202.866, -4758.76), (210.184, -3255.26) (225.341, -2053.01), (240.499, -1554.85)</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="images/Fish_Eye.png" >
+                    <img src="LensSimulator/images/Fish_Eye.png" >
                     <p align="middle">Figure 20: Muller 16mm/f4 155.9FOV fisheye lens / Some points are (28.6893, -4700.97), (31.8559, -51.0458), (33.727, -39.525), (36.1739, -33.1267) (40.2041, -28.5056), (42.9388, -26.8565) </p>
                 </div>
             </div>
@@ -193,11 +193,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part1_near_focus_dragon.png" >
+                    <img src="LensSimulator/images/part1_near_focus_dragon.png" >
                     <p align="middle">Figure 21: A rendering of a dragon with a focus on the right side of its face.</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part1_coil.png" >
+                    <img src="LensSimulator/images/part1_coil.png" >
                     <p align="middle">Figure 22: A rendering of a coil with a focus towards the end of it.</p>
                 </div>
             </div>
@@ -208,11 +208,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/bunny_before_tricky.png" >
+                    <img src="LensSimulator/images/bunny_before_tricky.png" >
                     <p align="middle">Figure 23: Discarding rays if missed, no extra tries.</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/bunny_after_tricky_no_bugs.png" >
+                    <img src="LensSimulator/images/bunny_after_tricky_no_bugs.png" >
                     <p align="middle">Figure 24: After implementing extra credit.</p>
                 </div>
             </div>
@@ -235,11 +235,11 @@
          <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part2_bunny1.png" >
+                    <img src="LensSimulator/images/part2_bunny1.png" >
                     <p align="middle">Figure 25: Bunny before autofocus.</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part2_bunny2.png" >
+                    <img src="LensSimulator/images/part2_bunny2.png" >
                     <p align="middle">Figure 26: Bunny after autofocus.</p>
                 </div>
             </div>
@@ -248,7 +248,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="images/Focus_metric.png" >
+                    <img src="LensSimulator/images/Focus_metric.png" >
                     <p align="middle">Figure 27: Sensor depths tested in autofocus function / Some points are (51.2587, 408.701), (53.0587, 977.744), (53.8087, 1306.53), (54.4087, 1416.44) (55.1587, 1067.81), (57.1087, 487.911) (64.6087, 105.209)</p>
                 </div>
             </div>
@@ -257,21 +257,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part2_dragon_lens1.png"/>
+                    <img src="LensSimulator/images/part2_dragon_lens1.png"/>
                     <p align="middle">Figure 28: D-GAUSS F/2 22deg HFOV</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part2_dragon_lens2.png"/>
+                    <img src="LensSimulator/images/part2_dragon_lens2.png"/>
                     <p align="middle">Figure 29: Wide-angle (38-degree) lens. Nakamura.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part2_dragon_lens3.png"/>
+                    <img src="LensSimulator/images/part2_dragon_lens3.png"/>
                     <p align="middle">Figure 30: SIGLER Super achromate telephoto, EFL=254mm, F/5.6" lens</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="images/part2_dragon_lens4.png"/>
+                    <img src="LensSimulator/images/part2_dragon_lens4.png"/>
                     <p align="middle">Figure 31: Muller 16mm/f4 155.9FOV fisheye lens</p>
                 </div>
             </div>
@@ -290,17 +290,17 @@
             </div>
         </div>
     </section>
-    <script src=../"js/jquery.js"></script>
+    <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="../js/jquery.easing.min.js"></script>
-    <script src="../js/jquery.fittext.js"></script>
-    <script src="../js/wow.min.js"></script>
-    <script src="../js/scrolling-nav.js"></script>
-    <script src="../js/faded.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/jquery.fittext.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="js/scrolling-nav.js"></script>
+    <script src="js/faded.js"></script>
 
 </body>
 </html>
